<resources>
    <string name="app_name">Wallpapers</string>
    <string-array name="main_tabs_titles">
        <item>@string/photos</item>
        <item>@string/collections</item>
        <item>@string/users</item>
    </string-array>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="relevance">Relevant</string>
    <string name="latest">Latest</string>
    <string name="camera">Camera Make</string>
    <string name="camera_model">Camera Model</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="shutter_speed">Aperture</string>
    <string name="iso">ISO</string>
    <string name="dimensions">Dimensions</string>
    <string name="downloads">Downloads</string>
    <string name="likes">Likes</string>
    <string name="unknown">Unknown</string>
    <string name="error_loading_photo_details">Error loading photo details</string>
    <string name="query_hint">Search...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_as_wallpaper_message">Are you sure you want to set photo as Wallpaper?</string>
    <string name="failed_to_set_wallpaper">Failed to set new wallpaper</string>
    <string name="wallpaper_successfully_set">Wallpaper changed successfully</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="photos">Photos</string>
    <string name="collections">Collections</string>
    <string name="users">Users</string>
    <string name="error_loading_user_details">Error loading user details</string>
    <string name="oldest">Oldest</string>
    <string name="popular">Popular</string>
    <string name="error_loading_photo">Error loading photos</string>
    <string name="error_loading_users">Error loading users</string>
    <string name="error_loading_collections">Error loading collections</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="user_details">User Details</string>
    <string name="photo_details">Photo details</string>
    <string name="collection_details">Collection details</string>
    <string name="sort">Sort</string>
    <string name="share">Share</string>
</resources>